clusters/non-prod/infra/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    name: vault
    app.kubernetes.io/name: vault
    app.kubernetes.io/component: infrastructure
