clusters/non-prod/infra/vault/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/component: infrastructure
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vault.nonprod.internal
spec:
  type: LoadBalancer
  ports:
    - port: 8200
      targetPort: http
      protocol: TCP
      name: http
    - port: 8201
      targetPort: cluster
      protocol: TCP
      name: cluster
  selector:
    app.kubernetes.io/name: vault
